// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test project creation Basic project 1`] = `
"name = "Basic"
authors = ["Test User <test.user@juliahub.com>"]
version = "0.1.0"

[deps]
DyadEcosystemDependencies = "7bc808db-8006-421e-b546-062440d520b7"
Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
DyadInterface = "99806f68-afab-45ca-9d8c-ceff6bc61f54"
ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
OrdinaryDiffEqDefault = "50262376-6c5a-4cf5-baba-aaf4f84d72d7"
PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
RuntimeGeneratedFunctions = "7e49a35a-f44a-4d26-94aa-eba1b4ca6b47"

[compat]
DyadEcosystemDependencies = "=0.9.4"
Markdown = "1"

[extras]
CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"

[targets]
test = ["CSV","DataFrames","Plots","Test"]
"
`;

exports[`Test project creation Basic project 2`] = `
"# A simple lumped thermal model
component Hello
  # Ambient temperature
  parameter T_inf::Temperature = 300
  # Initial temperature
  parameter T0::Temperature = 320
  # Convective heat transfer coefficient
  parameter h::CoefficientOfHeatTransfer = 0.7
  # Surface area
  parameter A::Area = 1.0
  # Mass of thermal capacitance
  parameter m::Mass = 0.1
  # Specific Heat
  parameter c_p::SpecificHeatCapacity = 1.2
  variable T::Temperature
relations
  # Specify initial conditions
  initial T = T0
  # Newton's law of cooling/heating
  m*c_p*der(T) = h*A*(T_inf-T)
metadata {"Dyad": {"tests": {"case1": {"stop": 10, "expect": {"initial": {"T": 320}}}}}}
end

analysis World
  extends TransientAnalysis(stop=10)
  model = Hello(T_inf=T_inf, h=h)
  parameter T_inf::Temperature = 300
  parameter h::CoefficientOfHeatTransfer = 0.7
end"
`;

exports[`Test project creation Overload deps 1`] = `
"name = "BasicWithDev"
authors = ["Test User <test.user@juliahub.com>"]
version = "0.1.0"

[deps]
DyadEcosystemDependencies = "7bc808db-8006-421e-b546-062440d520b7"
Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
DyadInterface = "99806f68-afab-45ca-9d8c-ceff6bc61f54"
ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
OrdinaryDiffEqDefault = "50262376-6c5a-4cf5-baba-aaf4f84d72d7"
PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
RuntimeGeneratedFunctions = "7e49a35a-f44a-4d26-94aa-eba1b4ca6b47"
DiffEqDevTools = "f3b72e0c-5b89-59e1-b016-84e28bfd966d"

[compat]
DyadEcosystemDependencies = "=0.9.4"
Markdown = "1"
DiffEqDevTools = "=2.45.0"

[extras]
CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"

[targets]
test = ["CSV","DataFrames","Plots","Test"]
"
`;
